# SimpleBoggle

./: README.md  SimpleBoggle.cpp
DontMindTheCodeName/: SimpleBoggle  a.out
DontMindTheCodeName/SimpleBoggle.dSYM/Contents/: Info.plist
DontMindTheCodeName/SimpleBoggle.dSYM/Contents/Resources/DWARF/: SimpleBoggle
DontMindTheCodeName/project1_ferguson_ncf0018.dSYM/Contents/: Info.plist
DontMindTheCodeName/project1_ferguson_ncf0018.dSYM/Contents/Resources/DWARF/: project1_ferguson_ncf0018
PythonBoostTesting/: CMakeLists.txt
PythonBoostTesting/cpp/: CMakeLists.txt
PythonBoostTesting/cpp/include/: testproj
PythonBoostTesting/cpp/include/testproj_bit/: testproj.hpp
PythonBoostTesting/cpp/src/: testproj.cpp
PythonBoostTesting/cpp/tests/: CMakeLists.txt
PythonBoostTesting/cpp/tests/src/: test.cpp
PythonBoostTesting/python/: CMakeCache.txt  testproj.cpp  testproj2.cpp
PythonBoostTesting/tests/: tests.py
